--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ach-5</title>
   </head>
   <body>
+    <header>This my fancy header</header>
     <nav class="navbar">
       <h1 class="logo">
         <a href="#"> Employment Agency</a>
