--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <li><a href="#">Locations</a></li>
       </ul>
     </nav>
+    <footer>This is my fancy footer</footer>
   </body>
 </html>
